# mobkp

./: .clang-format  .gitignore  .zenodo.json  CITATION.cff  CMakeLists.txt  LICENSE  README.md  flake.nix
.github/workflows/: ubuntu-22.04.yml
apps/: CMakeLists.txt  mobkp.cpp  mobkpsolve.cpp
cmake/: mobkp-config.cmake.in  mobkp.pc.in
cmake/modules/: Findglpk.cmake  Findmooutils.cmake
include/mobkp/: anytime_trace.hpp  bb.hpp  bounds.hpp  dp.hpp  minknap.hpp  nemull.hpp  orders.hpp  pls.hpp  problem.hpp  scalarization.hpp  solution.hpp
scripts/: generator.R  validate_solutions.R
